--- a/qr_customer_system/Gemfile
+++ b/qr_customer_system/Gemfile
@@ -45,3 +45,7 @@ group :development, :test do
   # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
   gem "rubocop-rails-omakase", require: false
 end
+
+gem 'rack-cors'
+gem 'bcrypt', '~> 3.1.7'
+gem 'jwt'
